--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,7 +8,7 @@ jobs:
   test-bot:
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [ubuntu-22.04, macos-13, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Set up Homebrew
