--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   pr-pull:
     if: contains(github.event.pull_request.labels.*.name, 'pr-pull')
-    runs-on: macos-latest
+    runs-on: ubuntu-22.04
     permissions:
       contents: write
       packages: none
@@ -20,6 +20,7 @@ jobs:
 
       - name: Pull bottles
         env:
+          HOMEBREW_NO_INSTALL_FROM_API: 1
           HOMEBREW_GITHUB_API_TOKEN: ${{ github.token }}
           HOMEBREW_GITHUB_PACKAGES_TOKEN: ${{ github.token }}
           HOMEBREW_GITHUB_PACKAGES_USER: ${{ github.actor }}
