--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,4 +37,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bottle-${{ matrix.runs-on }}
-          path: '*.bottle.${{ matrix.runs-on }}.*'
+          path: '*.bottle.*'
